--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -38,6 +38,8 @@
     <meta property="article:published_time" content="">
     <meta property="article:modified_time" content="">
     <meta property="article:expiration_time" content="">
+    <link rel="stylesheet" href="css/style.min.css">
+
 </head>
 <body>
 
